feat: add get php configs api presentation
